--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -1,5 +1,5 @@
 .skills__container {
-    grid-template-columns: repeat(2, 350px);
+    grid-template-columns: repeat(3, 350px);
     column-gap: 3rem;
     justify-content: center;
 
@@ -48,6 +48,14 @@
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
+@media screen and (max-width: 1200px) {
+    .skills__container {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 2rem;
+        padding: 2rem;
+    }
+  }
+
 @media screen and (max-width: 992px) {
     .skills__container {
         grid-template-columns: max-content;
@@ -73,6 +81,5 @@
     }
     .skills__name {
         font-size: var(--small-font-size);
-    
   }
 }
