--- a/src/Components/qualification/qualification.css
+++ b/src/Components/qualification/qualification.css
@@ -40,14 +40,18 @@
 .qualification__data{
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    column-gap: var(--font-medium);
+    column-gap: 1.5rem;
+}
+.qualification__title {
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
 }
 .qualification__subtitle {
     display: inline-block;
     font-size: var(--small-font-size);
     margin-bottom: var(--mb-1);
 }
-.qualification.calender {
+.qualification__calender {
     font-size: var(--small-font-size);
 }
 .qualification__rounder {
@@ -64,3 +68,36 @@
     background-color: var(--text-color);
     transform: translate(6px, -7px);
 }
+
+/*=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+    .qualification__container {
+        margin-left: auto;
+        margin-right: auto;
+  }
+}
+  
+  /* For medium devices */
+  @media screen and (max-width: 768px) {
+    .qualification__container {
+        margin-left: var(--mb-1-5);
+        margin-right: var(--mb-1-5);
+  }
+}
+@media screen and (max-width: 576px) {
+    .qualification__sections {
+        grid-template-columns: initial;
+    }
+    .qualification__button {
+        margin: 0 var(--mb-0-75);
+    }
+  }
+
+ /* For small devices */
+ @media screen and (max-width: 350px) {
+    .qualification__data {
+        gap: 0.5rem;
+    }
+    
+  }
