--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -37,6 +37,11 @@
 .active-link, .nav-link:hover {
   color: var(--title-color-dark);
 }
+/* ======== Change Background Color =========== */
+
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
 
 /* ======== BreakPoints =========== */
 /* For medium devices */
