--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -13,15 +13,15 @@
   align-items: center;
   column-gap: 1rem;
 }
-.nav_logo, .nav_toggle {
+.nav__logo, .nav__toggle {
   color: var(--title-color);
   font-weight: var(--font-medium);
 }
-.nav_list{
+.nav__list{
   display: flex;
   column-gap: 2rem;
 }
-.nav_link{
+.nav__link{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +30,7 @@
   font-weight: var(--font-medium);
   transition: .3s;
 }
-.nav_icon, .nav_close, .nav_toggle {
+.nav_icon, .nav_close, .nav__toggle {
   display: none;
 }
 /* Active Link */
@@ -53,7 +53,7 @@
   .nav {
     height: var(--header-height);
   }
-  .nav_menu{
+  .nav__menu{
     position: fixed;
     bottom: -100%;
     left: 0;
@@ -68,7 +68,7 @@
   .show-menu{
     bottom:0;
   }
-  .nav_list{
+  .nav__list{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
@@ -87,22 +87,22 @@
   .nav_close:hover {
     color: var(--title-color-dark);
   }
-  .nav_toggle {
+  .nav__toggle {
     font-size: 1.1rem;
     cursor: pointer;
 
   }
-  .nav_icon, .nav_close, .nav_toggle{
+  .nav_icon, .nav_close, .nav__toggle{
     display: block
   }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px){
-  .nav_menu{
+  .nav__menu{
     padding: 2rem 0.25rem 4rem;
   }
-  .nav_list {
+  .nav__list {
     column-gap: 0;
   }
 }
