--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
 
 /*=============== VARIABLES CSS ===============*/
 :root {
@@ -17,23 +19,25 @@
 
   /*========== Font and typography ==========*/
   --body-font: "Poppins", sans-serif;
+  --stylic-font: "Playfair";
+  --curved-font: "Italiana";
 
   /*.5rem = 8px | 1rem = 16px ...*/
   --big-font-size: 3.5rem;
   --h1-font-size: 2.25rem;
   --h2-font-size: 1.5rem;
   --h3-font-size: 1.25rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.875rem;
-  --smaller-font-size: 0.813rem;
-  --tiny-font-size: 0.625rem;
+  --normal-font-size: 1.5rem;
+  --small-font-size: 1.3125rem;
+  --smaller-font-size: 1.2195rem;
+  --tiny-font-size: 0.9375rem;
 
   /*========== Font weight ==========*/
   --font-normal: 400;
   --font-medium: 500;
   --font-semi-bold: 600;
 
-  /*========== Margenes Bottom ==========*/
+  /*========== Margins ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
   --mb-0-25: 0.25rem;
   --mb-0-5: 0.5rem;
@@ -127,6 +131,7 @@ img {
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: 4rem;
+  font-family: var(--stylic-font);
 }
 
 .section__title,
@@ -136,7 +141,7 @@ img {
 
 /*=============== LAYOUT ===============*/
 .container {
-  max-width: 968px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -147,17 +152,19 @@ img {
 }
 
 /*=============== BUTTONS ===============*/
+/* padding: 1.25rem 2rem;
+  font-weight: var(--font-normal); */
 .button {
   display: inline-block;
-  background-color: var(--title-color);
+  background-color: hsl(202, 78%, 60%);
   color: var(--container-color);
-  padding: 1.25rem 2rem;
+  padding: 0.5rem 1.5rem;
   border-radius: 1rem;
-  font-weight: var(--font-medium);
+
 }
 
 .button:hover {
-  background-color: var(--title-color-dark);
+  background-color: hsl(202, 78%, 70%);
 }
 
 .button__icon {
