--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -22,6 +22,13 @@
     padding: 1rem;
     border-radius: 0.75rem;
     text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+}
+
+.contact__card:hover {
+    transform: translateY(-10px);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    background: #eef4ff;
 }
 .contact__card-icon {
     font-size: 2rem;
@@ -29,7 +36,7 @@
     margin-bottom: var(--mb-0-25);
 }
 .contact__card-title, .contact__card-data {
-    font-size: var(--small-font-size);
+    font-size: var(--smaller-font-size);
 }
 .contact__card-title {
     font-weight: var(--font-medium);
@@ -40,12 +47,15 @@
 }
 
 .contact__button {
-    color: var(--text-color);
-    font-size: var(--small-font-size);
+    color: hsl(202, 78%, 60%);
+    font-size: var(--tiny-font-size);
     display: inline-flex;
     align-items: center;
     justify-content: center;
     column-gap: 0.25rem;
+}
+.contact__button:hover {
+    color: hsl(202, 78%, 70%);
 }
 .contact__button-icon {
     font-size: 1rem;
@@ -57,6 +67,7 @@
 }
 .contact__form {
     width: 360px;
+    
 }
 .contact__form-div {
     position: relative;
@@ -75,15 +86,17 @@
     outline: none;
     border-radius: 0.75rem;
     padding: 1.5rem;
+    font-size: var(--tiny-font-size);
     z-index: 1;
 }
 .contact__form-tag {
     position: absolute;
-    top: -0.75rem;
+    top: -1.15rem;
     left: 1.25rem;
     font-size: var(--smaller-font-size);
     padding: 0.25rem;
     background-color: var(--body-color);
+    color: var(--title-color);
     z-index: 10;
 }
 .contact__form-area {
