--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -12,9 +12,13 @@
  .footer__title {
     text-align: center;
     margin-bottom: var(--mb-2);
+    font-size: var(--normal-font-size);
+ }
+ .footer__link {
+   font-size: var(--small-font-size);
  }
  .footer__link:hover {
-    color: var(--title-color-dark)
+    color: hsl(240, 100%, 50%);
  }
  .footer__list {
     display: flex;
@@ -31,7 +35,7 @@
  .footer__social-link {
     background-color: var(--title-color);
     color: var(--container-color);
-    font-size: 1.125rem;
+    font-size: 1rem;
     padding: 0.4rem;
     border-radius: 0.5rem;
     display: inline-flex;
@@ -45,7 +49,7 @@
     margin-top: 4.5rem;
     color: var(--title-color);
     text-align: center;
-    font-size: var(--smaller-font-size);
+    font-size: var(--tiny-font-size);
 
  }
 
