--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -14,8 +14,9 @@
   column-gap: 1rem;
 }
 .nav__logo, .nav__toggle {
-  color: var(--title-color);
+  color: hsl(240, 100%, 50%);
   font-weight: var(--font-medium);
+  text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
 }
 .nav__list{
   display: flex;
@@ -25,17 +26,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: var(--small-font-size);
+  font-size: var(--smaller-font-size);
   color: var(--title-color);
   font-weight: var(--font-medium);
   transition: .3s;
 }
+
 .nav_icon, .nav_close, .nav__toggle {
   display: none;
 }
 /* Active Link */
 .active-link, .nav-link:hover {
-  color: var(--title-color-dark);
+  color: hsl(240, 100%, 50%);
 }
 /* ======== Change Background Color =========== */
 
@@ -44,6 +46,15 @@
 }
 
 /* ======== BreakPoints =========== */
+@media screen and (max-width: 1230px) {
+  .nav_list {
+    padding-right: 3rem;
+  }
+  .nav__logo{
+    padding-left: 3rem;
+  }
+}
+
 /* For medium devices */
 @media screen and (max-width: 768px){
   .header {
@@ -59,7 +70,7 @@
     left: 0;
     width: 100%;
     background-color: var(--body-color);
-    padding: 2rem 1.5rem 4rem;
+    padding: 2rem 1.5rem 4rem ;
     box-shadow: 0 -1px 4px rgba(0, 0 , 0, 0.15);
     border-radius: 1.5rem 1.5rem 0 0;
     transition: .3s;
