--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,9 @@
 .home__container {
     row-gap: 7rem;
 }
+.home__data {
+    font-family: var(--stylic-font);
+}
 .home__content {
     grid-template-columns: 116px repeat(2, 1fr);
     padding-top: 5.5rem;
@@ -13,15 +16,16 @@
     row-gap: 1rem;
 }
 .home__social-icon {
-    font-size: 1.25rem;
-    color: var(--title-color);
+    font-size: 1.875rem;
+    color: hsl(202, 49%, 15%);
 }
 .home__social-icon:hover {
-    color: var(--title-color-dark);
+    color: #6F4E37;
 }
 .home__title {
-    font-size: var(--big-font-size);
+    font-size: var(--h1-font-size);
     margin-bottom: var(--mb-0-25);
+    font-family: var(--curved-font);
 }
 .home__hand {
     width: 38px;
@@ -30,7 +34,7 @@
 }
 .home__subtitle {
     position: relative;
-    font-size: var(--h3-font-size);
+    font-size: var(--h1-font-size);
     padding-left: 5.4rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
@@ -46,8 +50,10 @@
     top: 1rem;
 }
 .home__description {
-    max-width: 400px;
+    max-width: 600px;
     margin-bottom: var(--mb-3);
+    font-size: var(--h2-font-size);
+    
 }
 .home__img {
     background: url(../../assets/profile.jpg);
@@ -58,7 +64,8 @@
     order: 1;
     width: 300px;
     height: 300px;
-    animation: profile__animate 8s ease-in-out infinite 1s;
+    animation: profile__animate 8s ease-in-out infinite 0s;
+    margin-left: var(--mb-3);
 }
 @keyframes profile__animate {
     0% {
@@ -75,7 +82,7 @@
     margin-left: 9.25rem;
 }
 .wheel {
-    animation: scroll 2s ease infinte
+    animation: scroll 2s ease infinte;
 }
 @keyframes scroll {
     0%{
@@ -88,7 +95,8 @@
 }
 .home__scroll-name {
     color: var(--title-color);
-    font-weight: var(--font-medium);
+    font-size: 1.25rem;
+    font-weight: var(--font-normal);
     margin-right: var(--mb-0-25);
     margin-left: 2px;
 }
@@ -98,12 +106,19 @@
 }
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
+
+/* ======== BreakPoints =========== */
+@media screen and (max-width: 1230px) {
+    .home__social{
+        padding: 3rem;
+    }
+  }
 @media screen and (max-width: 992px) {
     .home__content {
         grid-template-columns: 100px repeat(2, 1fr);
         column-gap: 1.25rem;
     }
-    .home__hand{
+    .home__hand {
         width: 26px;
         height: 26px;
     }
@@ -150,6 +165,15 @@
     .home__scroll{
         display: none;
     }
+  }
+
+@media screen and (max-width: 576px) {
+    .home__img{
+        width: 200px;
+        height: 200px;
+        margin-left: -2.75rem;
+    }
+
     
   }
   
@@ -158,11 +182,20 @@
     .home__img{
         width: 180px;
         height: 180px;
+        margin-right: 5rem;
     }
     .home__hand{
         width: 22px;
         height: 22px;
     }
-    
+    .home__content {
+        column-gap: 1rem;
+    }
+    .home__description {
+        margin-right: var(--mb-2-5);
+    }
+    .home__social-icon {
+        font-size: 1.5rem;
+    }
   }
   
