--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,5 +1,5 @@
 .services__container {
-    grid-template-columns: repeat(3, 270px);
+    grid-template-columns: repeat(3, 300px);
     justify-content: center;
     column-gap: 1.8rem;
 }
@@ -8,8 +8,17 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--container-color);
     padding: 6rem 0 2rem 2.5rem;
-
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color 0.5s ease 0.3s;
 }
+.services__content:hover {
+    background-color: #eef4ff; /* Light blue background */
+}
+
+
+
 .services__icon{
     display: block;
     font-size: 2rem;
@@ -23,8 +32,8 @@
     font-weight: var(--font-medium);
 }
 .services__button {
-    color: var(--title-color);
-    font-size: var(--small-font-size);
+    color: hsl(202, 78%, 60%);
+    font-size: var(--smaller-font-size);
     display: inline-flex;
     align-items: center;
     column-gap: 0.25rem;
@@ -34,8 +43,11 @@
     font-size: 1rem;
     transition: 0.3s;
 }
+.services__button:hover {
+    color: hsl(202, 78%, 80%);
+}
 .services__button:hover .services__button-icon {
-    transform: translateX(00.25rem);
+    transform: translateX(0.25rem);
 }
 .services__modal {
     position: fixed;
@@ -49,15 +61,17 @@
     justify-content: center;
     align-items: center;
     padding: 0.1rem;
-    opacity: 1;
+    opacity: 0;
     visibility: hidden;
-    transform: .3s;
+    /* transform: .3s; */
+    transform: translateY(-100px);
+    transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out, visibility 0.3s ease-in-out;
 }
 .services__modal-content {
     width: 500px;
     position: relative;
     background-color: var(--container-color);
-    padding: 4.5rem  2.5rem 2.5rem;
+    padding: 3.5rem 1.5rem;
     border-radius: 1.5rem;
 }
 .services__modal-close {
@@ -73,13 +87,14 @@
 }
 
 .services__modal-title {
-    font-size: var(--h3-font-size);
+    font-size: var(--h2-font-size);
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-1);
+    color: #007bff;
 }
 .services__modal-description {
-    font-size: var(-small-font-size);
-    padding: 0 3.5rem;
+    font-size: var(--small-font-size);
+    padding: 0 0.5rem;
     margin-bottom: var(--mb-2);
 }
 .services__modal-services {
@@ -95,13 +110,14 @@
     font-size: 1.1rem;
 }
 .services__modal-info {
-    font-size: var(--small-font-size);
+    font-size: var(--smaller-font-size);
 }
 
 /* Active Modal */
 .active-modal {
     opacity: 1;
-    visibility: visible;  
+    visibility: visible;
+    transform: translateY(0);
 }
 
 /*=============== BREAKPOINTS ===============*/
