--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -9,13 +9,34 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 2rem 4rem;
     border-radius: 1.25rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transform: translateY(30px);
+    opacity: 0;
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
+@keyframes fadeUp {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.skills__content.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
 .skills__title {
-    font-size: var(--normal-font-size);
+    font-size: var(--small-font-size);
     font-weight: var(--font-medium);
     text-align: center;
     margin-bottom: var(--mb-1-5);
+    color: #6587b4;
 }
 
 .skills__box {
@@ -38,7 +59,7 @@
 }
 
 .skills__name{
-    font-size: var(--normal-font-size);
+    font-size: var(--tiny-font-size);
     font-weight: var(--font-medium);
     line-height: 18px;
 }
@@ -48,7 +69,7 @@
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
-@media screen and (max-width: 1220px) {
+@media screen and (max-width: 1230px) {
     .skills__container {
         grid-template-columns: repeat(2, 1fr);
         row-gap: 2rem;
