--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -11,10 +11,12 @@
     border-radius: 0.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: background-color 0.5s ease 0.3s;
+    transition: background-color 0.5s ease 0.3s, border 0.5s ease 0.2s;
 }
 .services__content:hover {
-    background-color: #eef4ff; /* Light blue background */
+    background-color: #f5f6f6; /* Light blue background */
+    border: 1px solid #d1a4be;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -63,7 +65,6 @@
     padding: 0.1rem;
     opacity: 0;
     visibility: hidden;
-    /* transform: .3s; */
     transform: translateY(-100px);
     transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out, visibility 0.3s ease-in-out;
 }
