--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -148,6 +148,9 @@
     .home__content {
         grid-template-columns: 0.5fr 3fr;
         padding-top: 3.5rem;
+        column-gap: 3rem;
+        margin-top: -3rem;
+
     }
     .home__img {
         order: initial;
